tests/snapshots/formats__windows-fnt__fixture-v2.fnt.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ fixture-v2.fnt — Windows raster font "Fixture Sans", 10pt, 8px high, chars 65-67  [0x0+0xab]
  ▾ Font info  [0x0+0x75]
      dfVersion: 0x200  [0x0+0x2]
      dfSize: 171  [0x2+0x4]
      dfCopyright: "Copyright (c) 2026 Fixture Foundry"  [0x6+0x3c]
      dfType: 0x0  [0x42+0x2]
      dfPoints: 10  [0x44+0x2]
      dfVertRes: 96  [0x46+0x2]
      dfHorizRes: 96  [0x48+0x2]
      dfAscent: 7  [0x4a+0x2]
      dfInternalLeading: 1  [0x4c+0x2]
      dfExternalLeading: 0  [0x4e+0x2]
      dfItalic: 0  [0x50+0x1]
      dfUnderline: 0  [0x51+0x1]
      dfStrikeOut: 0  [0x52+0x1]
      dfWeight: 400  [0x53+0x2]
      dfCharSet: ANSI (0x0)  [0x55+0x1]
      dfPixWidth: 0  [0x56+0x2]
      dfPixHeight: 8  [0x58+0x2]
      dfPitchAndFamily: 0x20  [0x5a+0x1]
      dfAvgWidth: 6  [0x5b+0x2]
      dfMaxWidth: 8  [0x5d+0x2]
      dfFirstChar: 65  [0x5f+0x1]
      dfLastChar: 67  [0x60+0x1]
      dfDefaultChar: 0  [0x61+0x1]
      dfBreakChar: 0  [0x62+0x1]
      dfWidthBytes: 0  [0x63+0x2]
      dfDevice: 0x0  [0x65+0x4]
      dfFace: 0x86  [0x69+0x4]
      dfBitsPointer: 0x0  [0x6d+0x4]
      dfBitsOffset: 0x93  [0x71+0x4]
  ▾ Character table — 4 entries  [0x76+0x10]
      0x41 'A': 5 — width 5, offset 0x93  [0x76+0x4] → 0x93+0x8
      0x42 'B': 6 — width 6, offset 0x9b  [0x7a+0x4] → 0x9b+0x8
      0x43 'C': 7 — width 7, offset 0xa3  [0x7e+0x4] → 0xa3+0x8
      Sentinel: 8 — width 8, offset 0xab  [0x82+0x4]
    Face name: "Fixture Sans"  [0x86+0xd]
