tests/snapshots/formats__windows-fnt__fixture-v3.fnt.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ fixture-v3.fnt — Windows raster font "Fixture Sans", 10pt, 8px high, chars 65-67  [0x0+0xd1]
  ▾ Font info  [0x0+0x75]
      dfVersion: 0x300  [0x0+0x2]
      dfSize: 209  [0x2+0x4]
      dfCopyright: "Copyright (c) 2026 Fixture Foundry"  [0x6+0x3c]
      dfType: 0x0  [0x42+0x2]
      dfPoints: 10  [0x44+0x2]
      dfVertRes: 96  [0x46+0x2]
      dfHorizRes: 96  [0x48+0x2]
      dfAscent: 7  [0x4a+0x2]
      dfInternalLeading: 1  [0x4c+0x2]
      dfExternalLeading: 0  [0x4e+0x2]
      dfItalic: 0  [0x50+0x1]
      dfUnderline: 0  [0x51+0x1]
      dfStrikeOut: 0  [0x52+0x1]
      dfWeight: 400  [0x53+0x2]
      dfCharSet: ANSI (0x0)  [0x55+0x1]
      dfPixWidth: 0  [0x56+0x2]
      dfPixHeight: 8  [0x58+0x2]
      dfPitchAndFamily: 0x20  [0x5a+0x1]
      dfAvgWidth: 6  [0x5b+0x2]
      dfMaxWidth: 8  [0x5d+0x2]
      dfFirstChar: 65  [0x5f+0x1]
      dfLastChar: 67  [0x60+0x1]
      dfDefaultChar: 0  [0x61+0x1]
      dfBreakChar: 0  [0x62+0x1]
      dfWidthBytes: 0  [0x63+0x2]
      dfDevice: 0x0  [0x65+0x4]
      dfFace: 0xac  [0x69+0x4]
      dfBitsPointer: 0x0  [0x6d+0x4]
      dfBitsOffset: 0xb9  [0x71+0x4]
  ▾ Version 3 fields  [0x75+0x1f]
      dfReserved: 0  [0x75+0x1]
      dfFlags: 0x1  [0x76+0x4]
      dfAspace: 0  [0x7a+0x2]
      dfBspace: 0  [0x7c+0x2]
      dfCspace: 0  [0x7e+0x2]
      dfColorPointer: 0x0  [0x80+0x4]
      dfReserved1: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x84+0x10]
  ▾ Character table — 4 entries  [0x94+0x18]
      0x41 'A': 5 — width 5, offset 0xb9  [0x94+0x6] → 0xb9+0x8
      0x42 'B': 6 — width 6, offset 0xc1  [0x9a+0x6] → 0xc1+0x8
      0x43 'C': 7 — width 7, offset 0xc9  [0xa0+0x6] → 0xc9+0x8
      Sentinel: 8 — width 8, offset 0xd1  [0xa6+0x6]
    Face name: "Fixture Sans"  [0xac+0xd]
